bug 739617 - cannot upload large files r=honzab

--HG--
extra : rebase_source : 5ea85a021233cf79a539980efc859a2d5372fe53