netwerk/protocol/http/nsHttpHandler.cpp
@@ -189,7 +189,7 @@ nsHttpHandler::nsHttpHandler()
     , mMaxOptimisticPipelinedRequests(4)
     , mPipelineAggressive(false)
     , mMaxPipelineObjectSize(300000)
-    , mPipelineReadTimeout(PR_MillisecondsToInterval(10000))
+    , mPipelineReadTimeout(PR_MillisecondsToInterval(30000))
     , mRedirectionLimit(10)
     , mPhishyUserPassLength(1)
     , mQoSBits(0x00)
@@ -1058,8 +1058,11 @@ nsHttpHandler::PrefsChanged(nsIPrefBranch *prefs, const char *pref)
     if (PREF_CHANGED(HTTP_PREF("pipelining.read-timeout"))) {
         rv = prefs->GetIntPref(HTTP_PREF("pipelining.read-timeout"), &val);
         if (NS_SUCCEEDED(rv)) {
-            mPipelineReadTimeout =
-                PR_MillisecondsToInterval(clamped(val, 500, 0xffff));
+            if (!val)
+                mPipelineReadTimeout = 0;
+            else
+                mPipelineReadTimeout =
+                    PR_MillisecondsToInterval(clamped(val, 500, 0xffff));
         }
     }
 
